# auth-service

./: .env  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: compose.yaml  devcontainer.json
.github/workflows/: test-service.yml
charts/authservice/: Chart.yaml  values.yaml
charts/authservice/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  destinationrule-egress.yaml  destinationrule-ingress.yaml  destinationrule.yaml  gateway.yaml  job.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml  serviceentry.yaml  virtualservice.yaml
charts/authservice/templates/jwks/: job.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
charts/authservice/templates/tests/: test-connection.yaml
src/auth_service/: api.py  main.py  oauth.py  settings.py  token.py
src/auth_service/api/: authentication.py  metrics.py  wellkown.py
tests/: conftest.py  test_api.py  test_authentication.py  test_main.py  test_token.py  test_wellknown.py
